// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with custom props 1`] = `
<div>
  <categories-list-stub
    categories="[object Object],[object Object],[object Object]"
    limit="2"
  />
</div>
`;

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with custom props without access to categories 1`] = `
<div>
  <categories-list-stub
    categories=""
    limit="2"
  />
</div>
`;

exports[`alarm-column-value-categories Renders \`alarm-column-value-categories\` with default props 1`] = `
<div>
  <div
    class="v-menu v-menu--inline"
  >
    <div
      class="v-menu__activator v-menu__activator--disabled"
    >
      <button
        class="v-btn v-btn--disabled v-btn--depressed v-btn--small theme--light"
        disabled="disabled"
        type="button"
      >
        <div
          class="v-btn__content"
        >
          common.links
        </div>
      </button>
    </div>
    <transition-stub
      name="v-menu-transition"
    />
  </div>
</div>
`;
